--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "license": "MIT",
   "dependencies": {
     "express": "^4.11.2",
-    "utility": "^1.3.0"
+    "utility": "^1.3.0",
+    "superagent": "~0.21.0",
+    "cheerio": "~0.18.0"
   }
 }
