--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,5 @@ node_js:
   - '0.8'
   - '0.10'
   - '0.11'
-before_script: cd testBrowser
-script: mocha-phantomjs index.html
+before_script: cd testBrowser && npm install
+script: npm test
